# DragonbornPresence-SE

./: .gitignore  AGENTS.md  AdditionalFunctions.cpp  AdditionalFunctions.h  CHANGELOG.md  CLEAN_ARCHITECTURE_MIGRATION.md  CMakeLists.txt  CMakePresets.json  DragonbornPresence.cpp  DragonbornPresence.h  DragonbornPresence.json  README.md  ScriptUtils.h  discord_loader.cpp  discord_loader.h  main.cpp  nexus_description.txt
.github/workflows/: ci.yml  release.yml
config/: DragonbornPresence.json
docs/: Discord-Presence-Configuration-RU.html  architecture.html  code-application.html  code-build.html  code-discord.html  code-entry.html  code-foundation.html  code-game.html  code-recipes.html  index.html  site.css  source-headers.html  source-loader.html  source-main.html  source-presence-application.html  source-presence-foundation.html  source-presence-runtime.html  source-text.html  source-walkthrough.html
fomod/: ModuleConfig.xml  info.xml
include/: AdditionalFunctions.h  DragonbornPresence.h  discord_loader.h  pch.h
include/DragonbornPresence/adapters/SkyrimTrueBeliever/: PapyrusValueReader.h  SkseLogger.h  StbGameDataSource.h  StbRuntimeAdapter.h  StbStringEncoding.h
include/DragonbornPresence/adapters/config/: JsonConfigProvider.h
include/DragonbornPresence/adapters/discord/: DiscordPresenceClient.h  DiscordSdkLoader.h
include/DragonbornPresence/application/: PresenceCoordinator.h
include/DragonbornPresence/application/ports/: IConfigProvider.h  IGameDataSource.h  ILogger.h  IPresenceClient.h
include/DragonbornPresence/core/: Config.h  Difficulty.h  LocationAssetResolver.h  LocationAssets.h  LocationContext.h  PlayerSnapshot.h  PresencePayload.h  RefreshReason.h  TextUtils.h
locales/de/: DragonbornPresenceLocale.json
locales/en/: DragonbornPresenceLocale.json
locales/es/: DragonbornPresenceLocale.json
locales/fr/: DragonbornPresenceLocale.json
locales/it/: DragonbornPresenceLocale.json
locales/ja/: DragonbornPresenceLocale.json
locales/ko/: DragonbornPresenceLocale.json
locales/pl/: DragonbornPresenceLocale.json
locales/pt/: DragonbornPresenceLocale.json
locales/ru/: DragonbornPresenceLocale.json
locales/zh/: DragonbornPresenceLocale.json
scripts/: Test-ReleaseVersion.ps1  Validate-ReleaseArchive.ps1
src/: AdditionalFunctions.cpp  DragonbornPresence.cpp  discord_loader.cpp  main.cpp
src/adapters/SkyrimTrueBeliever/: SkseLogger.cpp  StbGameDataSource.cpp  StbRuntimeAdapter.cpp  StbStringEncoding.cpp
src/adapters/config/: JsonConfigProvider.cpp
src/adapters/discord/: DiscordPresenceClient.cpp  DiscordSdkLoader.cpp
src/application/: PresenceCoordinator.cpp
src/core/: Difficulty.cpp  LocationAssetResolver.cpp  TextUtils.cpp
tests/: DifficultyTests.cpp  JsonConfigProviderTests.cpp  LocationAssetResolverTests.cpp  PresenceCoordinatorTests.cpp  StbStringEncodingTests.cpp  TextUtilsTests.cpp
